# contui

./: .gitignore  Cargo.toml  README.md  todo_state.json
doc/: function_calling.md  generateContent_request.md  todo.md
src/: app.rs  config.rs  file_access.rs  gemini.rs  history.rs  logger.rs  main.rs  markdown.rs  test_function_calling.rs  test_tui.rs  todo.rs  todo_manager.rs
src/app/: cursor_movement.rs  file_operations.rs  handler.rs  mod.rs  session_management.rs  terminal_util.rs  todo_management.rs  ui.rs  visual_mode.rs
