[package]
name = "contui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
anyhow = "1.0"
unicode-width = "0.1"
unicode-segmentation = "1.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
pulldown-cmark = "0.10"
regex = "1.0"
